--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/node": "^14.14.37",
     "@types/websocket": "^1.0.2",
+    "@types/yargs": "^16.0.1",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "eslint": "^7.23.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
@@ -21,6 +22,7 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
-    "websocket": "^1.0.33"
+    "websocket": "^1.0.33",
+    "yargs": "^16.2.0"
   }
 }
