--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "author": "Second Spectrum",
   "devDependencies": {
+    "@types/graceful-fs": "^4.1.5",
     "@types/node": "^14.14.37",
     "@types/websocket": "^1.0.2",
     "@types/yargs": "^16.0.1",
@@ -19,6 +20,7 @@
     "eslint": "^7.23.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-plugin-import": "^2.22.1",
+    "graceful-fs": "^4.2.8",
     "prettier": "^2.2.1",
     "typescript": "^4.2.3"
   },
