--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
+    "@types/async": "^3.2.10",
+    "async": "^3.2.2",
     "websocket": "^1.0.33",
     "yargs": "^16.2.0"
   }
