--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "lib/index.js",
   "scripts": {
     "version": "node -v",
-    "test": "npm run test",
     "build": "rm -rf lib && tsc --pretty && npm run prettier",
     "lint": "eslint --ext .ts src",
     "prettier": "prettier --loglevel error --write './src/**/*.ts'"
@@ -28,5 +27,8 @@
     "eslint-plugin-import": "^2.25.4",
     "prettier": "^2.5.1",
     "typescript": "^4.5.4"
+  },
+  "prettier": {
+    "singleQuote": true
   }
 }
