--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "license": "UNLICENSCED",
   "dependencies": {
     "axios": "~0.21.1",
+    "graceful-fs": "^4.2.10",
     "path": "~0.12.7",
     "websocket": "^1.0.34",
     "yargs": "^16.2.0"
   },
   "devDependencies": {
+    "@types/graceful-fs": "^4.1.5",
     "@types/node": "~17.0.7",
     "@types/websocket": "^1.0.4",
     "@types/yargs": "^16.0.1",
