--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Second Spectrum",
   "license": "UNLICENSCED",
   "dependencies": {
+    "async": "^3.2.4",
     "axios": "~0.21.1",
     "graceful-fs": "^4.2.10",
     "path": "~0.12.7",
@@ -19,6 +20,7 @@
     "yargs": "^16.2.0"
   },
   "devDependencies": {
+    "@types/async": "^3.2.15",
     "@types/graceful-fs": "^4.1.5",
     "@types/node": "~17.0.7",
     "@types/websocket": "^1.0.4",
