fix: Typo in ci install

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ image: 676020893150.dkr.ecr.us-east-1.amazonaws.com/node:16
 upload:
   stage: build
   script:
-    - apt-get update && apt-get install aws
+    - apt-get update && apt-get install awscli
     - npm ci
     - npm run build
     - npm run pkg
