chore(ci): Fix aws s3 command

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,4 +10,4 @@ upload:
     - npm ci
     - npm run build
     - npm run pkg
-    - aws cp dist/* s3://ssi-misc/hermes-reference-client/
+    - aws s3 cp dist/* s3://ssi-misc/hermes-reference-client/
