Squashed commit of the following:
commit 044fca1554f23bb9b718173af1cb81095dd5774c
Author: Cameron Pickham <cameron@secondspectrum.com>
Date:   Wed Oct 5 17:25:11 2022 -0700

    feat: Add CLIENT_ID and CLIENT_SECRET back to auth.ts

commit b32f67e2837280889365138540d9df238f11a8de
Author: Cameron Pickham <cameron@secondspectrum.com>
Date:   Wed Oct 5 17:24:39 2022 -0700

    feat: Add CLIENT_ID and CLIENT_SECRET back to auth.ts

commit ceb44aba1e39470a3232c2240afeb5fd6d0012dd
Merge: 83fde01 0cf87e5
Author: Cameron Pickham <cameron@secondspectrum.com>
Date:   Wed Oct 5 17:09:41 2022 -0700

    Merge branch 'feature/remove-windows-package-lock' into 'main'

    Remove windows package json

    See merge request platform/hermes-reference-client!9

commit 0cf87e5ffdca79a9db2519abee85fba700e8c3ef
Author: Samarth Mohan <samarth.mohan@geniussports.com>
Date:   Wed Oct 5 15:31:51 2022 -0700

    refactor: Update README

commit 012d79244562f4943793df4cec4b60a26d4c61db
Author: Samarth Mohan <samarth.mohan@geniussports.com>
Date:   Wed Oct 5 15:13:29 2022 -0700

    feat: Remove windows package json

commit 83fde0178da2c063b12ca98fc9a3c8a392f915e2
Author: zack kourouma <zack@secondspectrum.com>
Date:   Thu Sep 8 18:01:17 2022 -0400

    chore(ci): Make aws sli cp recursive

commit 71264bfc8a66d9b7d47465e57129f7a54ec91311
Author: zack kourouma <zack@secondspectrum.com>
Date:   Thu Sep 8 15:48:02 2022 -0400

    chore(ci): Change glogl to dot in aws cp

commit 91a72b3fbb36513e6f5877c0bb7e8db1cf28d88f
Author: zack kourouma <zack@secondspectrum.com>
Date:   Thu Sep 8 15:44:57 2022 -0400

    chore(ci): Fix aws s3 command

commit f03c5e57fe10cf6ce13daba2bb188e14a2cec690
Author: zack kourouma <zack@secondspectrum.com>
Date:   Thu Sep 8 15:28:27 2022 -0400

    chore: Auto approve cli install

commit 3b4f8070f7ad2b578a28022c9e560d3fcf553985
Author: zack kourouma <zack@secondspectrum.com>
Date:   Thu Sep 8 15:19:33 2022 -0400

    fix: Typo in ci install

commit 3e5d5ccf10f49ab69d781b9

--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "version": "node -v",
     "build": "rm -rf lib && tsc --pretty && npm run prettier",
+    "build-windows": "del lib && tsc --pretty",
     "lint": "eslint --ext .ts src",
-    "prettier": "prettier --loglevel error --write './src/**/*.ts'"
+    "prettier": "prettier --loglevel error --write './src/**/*.ts'",
+    "pkg": "pkg lib/index.js --targets=node16-macos-arm64,node16-macos-x64,node16-win-x64,node16-linux-x64 --out-path dist"
   },
   "author": "Second Spectrum",
   "license": "UNLICENSCED",
@@ -30,7 +32,8 @@
     "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-plugin-import": "^2.25.4",
     "prettier": "^2.5.1",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.4",
+    "pkg": "^5"
   },
   "prettier": {
     "singleQuote": true
